- Updated the smart script for Snowfall Glade Pup to give every member of a group the quest item.

[2022-06-05]
- Updated the smart script for Dead Mage Hunter to give every member of a group the quest item.
- Updated the respawn time of Cedar Chest.
- Added Blackroot Stalk to the loot table of Grizzly Bear for the quest Just Passing Through.
- Updated the flags of Blackroot Stalk to allow every member of a group to loot it.

[2022-06-06]
- Updated the flags of Golem Blueprint Section 1 to allow every member of a group to loot it.
- Updated the flags of Golem Blueprint Section 2 to allow every member of a group to loot it.
- Updated the flags of Golem Blueprint Section 3 to allow every member of a group to loot it.

[2022-06-07]
- Updated the smart script for Primordial Drake Egg to spawn one creature per group member.
- Added Roc Egg to the loot table of Goretalon Roc for the quest My Pet Roc.
- Updated the flags of Roc Egg to allow every member of a group to loot it.
- Added Har'koan Relic to the loot table of Claw of Har'koa for the quest Relics of the Snow Leopard Goddess.
- Added Har'koan Relic to the loot table of Har'koan Subduer for the quest Relics of the Snow Leopard Goddess.
- Updated the flags of Har'koan Relic to allow every member of a group to loot it.
- Added Gundrak Raptor Egg to the loot table of Gundrak Raptor for the quest Eggs for Dubra'Jin.
- Updated the respawn time of Weeping Quarry Document.
- Updated the respawn time of Weeping Quarry Ledger.
- Updated the respawn time of Weeping Quarry Map.
- Updated the respawn time of Weeping Quarry Schedule.

[2022-06-08]
- Added the script for world gameobjects to make the quest Ebon Blade Prisoners trigger for every member of a group.

[2022-06-09]
- Added the script for Icecrown to make the quest Into The Wild Green Yonder trigger for every member of a group.

[2022-06-11]
- Updated the smart script for Hyldsmeet Drakerider to give every member of a group the kill credit.